task: removed default content task: added a sample project

--- a/package.json
+++ b/package.json
@@ -1,35 +1,18 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "alchemyjs",
   "version": "0.1.0",
-  "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+  "description": "Simple personal financial-accounting web application.",
+  "main": "web.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
-  },
-
-  "engines": {
-    "node": ">= 0.10.0",
-    "npm": ">= 1.0.0"
-  },
-
+  "author": "Maurizio Branca <maurizio.branca@gmail.com>",
+  "license": "MIT",
   "dependencies": {
-    "express": "~3.4.4"
+    "logfmt": "~0.20.0",
+    "express": "~3.4.8"
   },
-  "devDependencies": {},
-  "bundleDependencies": [],
-
-  "private": true,
-  "main": "server.js"
+  "engines": {
+    "node": "0.10.x"
+  }
 }
