--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "logfmt": "~0.20.0",
+    "less-middleware": "*",
+    "ejs-locals": "~1.0.2",
     "express": "~3.4.8"
   },
   "engines": {
