--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "logfmt": "~0.20.0",
     "less-middleware": "*",
     "ejs-locals": "~1.0.2",
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "bower": "~1.2.8"
   },
   "engines": {
     "node": "0.10.x"
