--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple personal financial-accounting web application.",
   "main": "web.js",
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "export HOME=$OPENSHIFT_REPO_DIR; bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maurizio Branca <maurizio.branca@gmail.com>",
