--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple personal financial-accounting web application.",
   "main": "web.js",
   "scripts": {
-    "postinstall": "export HOME=$OPENSHIFT_REPO_DIR; bower install",
+    // "postinstall": "HOME=$OPENSHIFT_REPO_DIR ./node_modules/bower/bin/bower install --config.directory=public/components",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maurizio Branca <maurizio.branca@gmail.com>",
