--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple personal financial-accounting web application.",
   "main": "web.js",
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "HOME=$OPENSHIFT_REPO_DIR ./node_modules/bower/bin/bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maurizio Branca <maurizio.branca@gmail.com>",
@@ -14,7 +14,7 @@
     "less-middleware": "*",
     "ejs-locals": "~1.0.2",
     "express": "~3.4.8",
-    "bower": "~1.2.8"
+    "bower": "~1.2.8"    
   },
   "engines": {
     "node": "0.10.x"
