--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "less-middleware": "*",
     "ejs-locals": "~1.0.2",
     "express": "~3.4.8",
-    "bower": "~1.2.8"
+    "bower": "~1.2.8",
+    "passport": "~0.2.0",
+    "passport-google": "~0.3.0"
   },
   "engines": {
     "node": "0.10.x"
