--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,11 @@
   ],
   "dependencies": {
     "jquery": "~2.1.0",
-    "bootstrap": "~3.1.0"
+    "bootstrap": "~3.1.0",
+    "backbone": "~1.1.0",
+    "requirejs": "~2.1.10",
+    "underscore": "~1.6.0",
+    "handlebars": "~1.3.0",
+    "requirejs-text": "~2.0.10"
   }
 }
